@@ -131,6 +131,7 @@
       <provider
             default="false"
             delegate="org.eclipse.linuxtools.internal.oprofile.launch.launching.OprofileLaunchConfigurationDelegate"
+            description="Hardware/Software Events Timing"
             id="org.eclipse.linuxtools.oprofile.launch.provider"
             name="Oprofile"
             priority="2"
