@@ -115,6 +115,13 @@ Invalid values will be assigned the lowest priority to the extension.
                </documentation>
             </annotation>
          </attribute>
+         <attribute name="description" type="string">
+            <annotation>
+               <documentation>
+                  Description of launch provider.
+               </documentation>
+            </annotation>
+         </attribute>
       </complexType>
    </element>
 
