@@ -22,6 +22,7 @@
       <provider
             default="false"
             delegate="org.eclipse.linuxtools.internal.valgrind.launch.ValgrindLaunchConfigurationDelegate"
+            description="%LaunchConfiguration.description.0"
             id="org.eclipse.linuxtools.profiling.provider.valgrind.helgrind"
             name="%LaunchConfiguration.name.0"
             priority="3"
