@@ -32,6 +32,7 @@
       <provider
             default="false"
             delegate="org.eclipse.linuxtools.internal.valgrind.launch.ValgrindLaunchConfigurationDelegate"
+            description="%massifLaunchConfiguration.description.0"
             id="org.eclipse.linuxtools.profiling.provider.valgrind.massif"
             name="%massifLaunchConfiguration.name.0"
             priority="2"
